# horton-part

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  HEADER  MANIFEST.in  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  updateheaders.py
.github/workflows/: deploy-docs.yml  pytest.yaml
_sources/: index.rst
_sources/notebooks/: gisa.ipynb  hirshfeld.ipynb  isa.ipynb  lisa.ipynb  lisa_diis.ipynb  mbis.ipynb  mulliken.ipynb  setup.rst
_sources/pyapi/: horton_part.algo.cdiis.rst  horton_part.algo.diis.rst  horton_part.algo.quasi_newton.rst  horton_part.algo.rst  horton_part.alisa.rst  horton_part.becke.rst  horton_part.core.base.rst  horton_part.core.cache.rst  horton_part.core.iterstock.rst  horton_part.core.logging.rst  horton_part.core.proatomdb.rst  horton_part.core.rst  horton_part.core.stockholder.rst  horton_part.gisa.rst  horton_part.glisa.rst  horton_part.gmbis.rst  horton_part.hirshfeld.rst  horton_part.isa.rst  horton_part.lisa.rst  horton_part.lisa_g.rst  horton_part.nlis.rst  horton_part.rst  horton_part.scripts.generate_cube.rst  horton_part.scripts.partition_density.rst  horton_part.scripts.program.rst  horton_part.scripts.rst  horton_part.utils.rst  modules.rst
denspart/: becke.py  gisa.py  grid.py  hirshfeld_i.py  lisa.py  mbis.py  utils.py
denspart/test/: common.py  test_base.py  test_becke.py  test_cache.py  test_mbis.py  test_mulliken.py  test_proatomdb.py  test_wpart.py
denspart/test/cached/: atom_om2.cp2k.out  atom_op1.cp2k.out  atom_op2.cp2k.out  ch3_hf_sto3g.fchk
docs/: conf.py  conventions.rst  gen_api.sh  index.rst  install.sh  installation.rst  requirements.txt  table_modules.csv
docs/notebooks/: Basic_Usage.ipynb  cdiis.py  from_api.ipynb  from_command_line.ipynb  gisa.ipynb  glisa.ipynb  hirshfeld.ipynb  isa.ipynb  lisa.ipynb  lisa_diis.ipynb  lisa_g.ipynb  mbis.ipynb  mulliken.ipynb  quick_start.ipynb  sample_input.yaml  setup.py
docs/notebooks/data/: c5h12.fchk  clo-.fchk  co.fchk
docs/notebooks/data/atoms/: main.sh
docs/pyapi/: horton_part.core.basis.rst  horton_part.core.moments.rst  horton_part.core.rst  horton_part.hirshfeld_i.rst  horton_part.mbis.rst  horton_part.mulliken.rst  horton_part.rst  horton_part.scripts.generate_density.rst  horton_part.scripts.rst
example/: run_gisa.py  run_lisa.py  run_mbis.py
example/data/: c6h6.fchk  h2o.fchk
example/data/atoms/: run_g09.sh  template.com
example/data/atoms/001__h_003_q-02/: horton.h5
example/data/atoms/005__b_002_q+03/: horton.h5
example/data/atoms/005__b_003_q+02/: horton.h5
example/data/atoms/005__b_004_q+01/: horton.h5
example/data/atoms/006__c_003_q+03/: horton.h5
example/data/atoms/006__c_004_q+02/: horton.h5
example/data/atoms/006__c_007_q-01/: horton.h5
example/data/atoms/006__c_008_q-02/: horton.h5
example/data/atoms/008__o_005_q+03/: horton.h5
example/data/atoms/008__o_006_q+02/: horton.h5
example/data/atoms/008__o_009_q-01/: horton.h5
examples/: run_gisa.py  run_isa.py  run_lisa.py  run_mbis.py  utils.py
examples/data/: c5h12.xyz
examples/data/atoms/: atoms.h5
examples/data/atoms/005__b_006_q-01/: horton.h5
notebooks/: gisa.html  gisa.ipynb  glisa.html  glisa.ipynb  hirshfeld.html  hirshfeld.ipynb  isa.html  isa.ipynb  lisa.html  lisa.ipynb  lisa_diis.html  lisa_diis.ipynb  lisa_g.html  lisa_g.ipynb  mbis.html  mulliken.html  mulliken.ipynb  quick_start.html  quick_start.ipynb  setup.html
pyapi/: horton_part.algo.cdiis.html  horton_part.algo.diis.html  horton_part.algo.html  horton_part.algo.quasi_newton.html  horton_part.alisa.html  horton_part.becke.html  horton_part.core.base.html  horton_part.core.basis.html  horton_part.core.cache.html  horton_part.core.html  horton_part.core.iterstock.html  horton_part.core.logging.html  horton_part.core.proatomdb.html  horton_part.core.stockholder.html  horton_part.gisa.html  horton_part.glisa.html  horton_part.gmbis.html  horton_part.hirshfeld.html  horton_part.hirshfeld_i.html  horton_part.html  horton_part.isa.html  horton_part.lisa.html  horton_part.lisa_g.html  horton_part.mbis.html  horton_part.mulliken.html  horton_part.nlis.html  horton_part.scripts.generate_cube.html  horton_part.scripts.generate_density.html  horton_part.scripts.html  horton_part.scripts.partition_density.html  horton_part.scripts.program.html  horton_part.utils.html  modules.html
src/denspart/: base.py  cache.py  grid.py  proatomdb.py  stockholder.py  version.py
src/horton_part/: __init__.py  __main__.py  alisa.py  base.py  basis.py  becke.py  cache.py  context.py  gisa.py  glisa.py  gmbis.py  hirshfeld.py  hirshfeld_i.py  isa.py  iterstock.py  lisa.py  lisa_g.py  log.py  mbis.py  moments.py  mulliken.py  nlis.py  proatomdb.py  stockholder.py  utils.py  version.py  wrapper.py
src/horton_part/algo/: __init__.py  cdiis.py  diis.py  quasi_newton.py
src/horton_part/core/: __init__.py  base.py  basis.py  cache.py  iterstock.py  logging.py  moments.py  proatomdb.py  stockholder.py
src/horton_part/data/: config.yaml  constants.yaml  gauss.json  gauss.yaml  gauss_exponents.json  gauss_initials.json  keywords.yaml  part-cube.yaml  part-dens.yaml  part-gen.yaml  references.bib  slater.json  slater.yaml  slater_exponents.json
src/horton_part/scripts/: __init__.py  generate_cube.py  generate_density.py  partition_density.py  program.py
tests/: __init__.py  common.py  test_alisa.py  test_base.py  test_basis.py  test_becke.py  test_cache.py  test_gisa.py  test_glisa.py  test_lisa.py  test_main.py  test_mbis.py  test_mulliken.py  test_nlis.py  test_proatomdb.py  test_wpart.py  test_wrapper.py
tests/cached/: atom_o.cp2k.out  atom_om1.cp2k.out  atom_si.cp2k.out  li_h_3-21G_hf_g09.fchk
tests/core/: test_base.py  test_basis.py  test_cache.py  test_moments.py  test_proatomdb.py
tests/scripts/: __init__.py  test_generate_cube.py  test_generate_density.py  test_main.py  test_partition_density.py
tools/conda.recipe/: meta.yaml
(+63 files in other folders)
